--- a/src/utils.css
+++ b/src/utils.css
@@ -36,11 +36,13 @@
     padding: 0px;
     margin: 0px;
 }
-
+html, body {
+    width: 100vw;
+    overflow-x: hidden;
+}
 body {
     background-color: var(--background-color);
-    width: 100%;
-    overflow-x: hidden;
+    
 }
 
 button {
